crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__chatgpt_recovery_tiny.snap
---
source: src/cli/renderer/live.rs
expression: rendered
---
│     setup  provider=chatgpt-codex model=chatgpt-codex/gpt-5.5 missing=ChatGPT OAuth credential  # [bg=#212337]=   [bg=#212337]=   [fg=#e0e0e0 bg=#212337 b]=setup [fg=#abb4da bg=#212337]=  provider=chatgpt-codex model=chatgpt-codex/gpt-5.5 missing=ChatGPT OAuth credential
│     Open https://auth.example.test/device and enter code ABCD-EFGH  # [bg=#212337]=   [bg=#212337]=   [fg=#ebfafa bg=#212337]=Open https://auth.example.test/device and enter code ABCD-EFGH
│     Waiting for ChatGPT authorization.  # [bg=#212337]=   [bg=#212337]=   [fg=#abb4da bg=#212337]=Waiting for ChatGPT authorization.
