crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__command_suggestions.snap
---
source: src/cli/renderer/live.rs
expression: frame.render_styled()
---
│   › clear  clear transcript                                                       # [bg=#292e42]=   [fg=#e0e0e0 bg=#292e42 b]=› [bg=#292e42]=  [fg=#ebfafa bg=#292e42 b]=clear [fg=#3b4261 bg=#292e42]=  clear transcript [bg=#292e42]=                                                    [bg=#292e42]=  
│     config path  show config paths                                                # [bg=#212337]=   [bg=#212337]=  [bg=#212337]=  [fg=#abb4da bg=#212337]=config path [fg=#3b4261 bg=#212337]=  show config paths [bg=#212337]=                                             [bg=#212337]=  
│     config show  show redacted config                                             # [bg=#212337]=   [bg=#212337]=  [bg=#212337]=  [fg=#abb4da bg=#212337]=config show [fg=#3b4261 bg=#212337]=  show redacted config [bg=#212337]=                                          [bg=#212337]=
