crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__first_run_recovery_tiny.snap
---
source: crates/thndrs/src/cli/renderer/live.rs
expression: rendered
---
│     setup  provider=umans model=umans-coder missing=UMANS_API_KEY  # [bg=#212337]=   [bg=#212337]=   [fg=#f7c67f bg=#212337 b]=setup [fg=#abb4da bg=#212337]=  provider=umans model=umans-coder missing=UMANS_API_KEY
│     Store this credential where?  # [bg=#212337]=   [bg=#212337]=   [fg=#ebfafa bg=#212337]=Store this credential where?
│       global credentials  # [bg=#212337]=   [bg=#212337]=   [fg=#abb4da bg=#212337]=  [bg=#212337]=  [fg=#ebfafa bg=#212337]=global credentials
