crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__footer_cjk.snap
---
source: crates/thndrs/src/cli/renderer/live.rs
expression: combined
---
width=80:
│     model: test-model   search: native   tok: ↑0 ↓0   git: main clean             # [bg=#212337]=   [bg=#212337]=   [fg=#abb4da bg=#212337]=model: test-model [bg=#212337]=    [fg=#abb4da bg=#212337]=search: native [bg=#212337]=    [fg=#f7c67f bg=#212337]=tok: ↑0 ↓0 [bg=#212337]=    [fg=#37f499 bg=#212337]=git: main clean [bg=#212337]=          [bg=#212337]=  
width=40:
│     model: test-model                     # [bg=#212337]=   [bg=#212337]=   [fg=#abb4da bg=#212337]=model: test-model [bg=#212337]=                  [bg=#212337]=
